1. пытаюсь закинуть