@@ -71,31 +71,19 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <mainClass>com.ui.SpringJavaFxRunner</mainClass>
-                    <jvmArguments>
-                        --module-path C:\Users\user\.m2\repository\javafx-sdk-21.0.7\lib
-                        --add-modules javafx.controls,javafx.fxml
-                    </jvmArguments>
-                </configuration>
-            </plugin>
-            <!-- JavaFX Maven Plugin -->
-            <plugin>
                 <groupId>org.openjfx</groupId>
                 <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version> <!-- Используем старую версию -->
+                <version>0.0.8</version>
                 <configuration>
                     <mainClass>com.ui.SpringJavaFxRunner</mainClass>
-<!--                    <options>-->
-<!--                        <option>&#45;&#45;module-path</option>-->
-<!--                        <option>C:/Users/user/.m2/repository/javafx-sdk-21.0.7</option>-->
-<!--                        <option>&#45;&#45;add-modules</option>-->
-<!--                        <option>javafx.controls,javafx.fxml</option>-->
-<!--                    </options>-->
-
                 </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
